# flame

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md  README_Updated.MD  SLOC_Policy.txt  cmake.bat  cmake_utils.cmake  cmake_vs2017.bat  dir.txt  do.cmake  flame.natvis  open_editor.bat  open_scene_editor.bat  run_setup_as_admin.bat  set_env.bat  set_path.bat  setup.py  sloc_options.ini  sloc_options.txt  utils.cmake
game/tetris/: .gitignore  CMakeLists.txt  key.cpp  key.h  main.cpp  main.prefab  main.world  mino.cpp  mino.h  package.bat  package_debug.bat  package_debug.ini  package_description.ini  package_description.txt  package_release.bat  package_release.ini  readme.txt  res  score.h  world
games/basketball_shooting/: CMakeLists.txt  main.cpp
games/dota_pubg/: CMakeLists.txt  attributes.prefab  bar.prefab  blocks.txt  camera.lua  character.lua  character_hud.prefab  chest.prefab  enemy.lua  fire_ball_projectile.prefab  floating_tip.prefab  grass.prefab  grass1.prefab  grass2.prefab  grass3.prefab  grass4.prefab  grass5.prefab  grass6.prefab  human.prefab  init.lua  init2.lua  initialize.lua  item.lua  item_block.prefab  item_slot.prefab  main.cpp  main.lua  main.prefab  npc.lua  player.lua  player.prefab  projectile.lua  remore.prefab  rock.prefab  rock1.prefab  rock2.prefab  rock3.prefab  skill.lua  skill_block.prefab  skill_slot.prefab  (+7 more)
games/shooting/: CMakeLists.txt
games/tetris/: .gitignore  CMakeLists.txt  key.cpp  main.cpp  mino.cpp  package.bat  package_description.ini  package_release.bat  score.h
renderpath/canvas/: CMakeLists.txt  bp  canvas.h  compile.bat  compile_debug.bat  compile_options.txt  compile_otions.ini  compile_relwithdebinfo.bat  element.frag  element.vert  make_cmd.cpp  pushconstant.cpp  renderpath.bp  template.cpp  text_lcd.frag  text_sdf.frag  type.cpp  type.h
source/: CMakeLists.txt  base64.h  bitmap.cpp  blueprint.cpp  config.in  file.cpp  font.cpp  function.cpp  imgui_config.h  imgui_extension.cpp  imgui_extension.h  json.h  math.h  memory.cpp  serialize.cpp  serialize.h  serialize_extension.h  system.cpp  type.cpp  type.h  type_private.h  typeinfo.cpp  window.cpp  worker.cpp  xml.h
source/3d/: CMakeLists.txt  camera.cpp  scene.cpp  scene_private.h
source/audio/: CMakeLists.txt  audio.h  audio_private.h  buffer.cpp  buffer.h  buffer_private.h  device.cpp  device.h  device_private.h  listener.cpp  listener.h  listener_private.h  source.cpp  source.h  source_private.h
source/blueprint/: CMakeLists.txt  blueprint.cpp  blueprint.h  blueprint_private.h
source/database/: CMakeLists.txt  database.cpp  database.h  database_private.h
source/foundation/: CMakeLists.txt  application.h  bitmap.cpp  bitmap.h  bitmap_private.h  blueprint.cpp  blueprint.h  blueprint_private.h  call_function.asm  database.cpp  database.h  database_private.h  foundation.cpp  foundation.h  foundation_private.h  network.cpp  network.h  network_private.h  serialize.cpp  sheet.cpp  sheet.h  sheet_private.h  system.cpp  system.h  system_private.h  type_info.cpp  type_info_private.h  typeinfo.cpp  typeinfo.desc  typeinfo.h  typeinfo_private.h  typeinfo_serialize.h  window.cpp  window.h  window_private.h
source/graphics/: CMakeLists.txt  animation.cpp  animation.h  animation_private.h  application.h  auxiliary.h  bp_nodes.cpp  buffer.cpp  buffer.h  buffer_ext.h  buffer_private.h  canvas.cpp  canvas.h  canvas_private.h  command.cpp  command.h  command_ext.h  command_private.h  commandbuffer.cpp  commandbuffer_private.h  debug.cpp  debug.h  descriptor.cpp  descriptor_private.h  device.cpp  device.h  device_private.h  explorer.h  explorer_abstract.h  extension.h  font.cpp  font.h  font_private.h  framebuffer.cpp  framebuffer_private.h  graphics.cpp  graphics.h  graphics_private.h  gui.cpp  gui.h  (+39 more)
source/imgui/: CMakeLists.txt  utils.h
source/network/: CMakeLists.txt  network.cpp  network.h  network_private.h
source/physics/: CMakeLists.txt  body2d.cpp  body2d.h  body2d_private.h  controller.cpp  controller.h  controller_private.h  device.cpp  device_private.h  material.cpp  material.h  material_private.h  physics.cpp  physics.h  physics_private.h  rigid.cpp  rigid.h  rigid_private.h  scene.cpp  scene.h  scene_private.h  shape.cpp  shape.h  shape_private.h  world2d.cpp  world2d.h  world2d_private.h
source/recastnav/: CMakeLists.txt
source/script/: CMakeLists.txt  script.cpp  script.h  script_private.h
source/sound/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_private.h  context.cpp  device.cpp  device.h  device_private.h  sound.h  sound_private.h  source.cpp  source.h  source_private.h
source/typeinfogen/: CMakeLists.txt  load_exe_as_dll.cpp  main.cpp
source/ui/: CMakeLists.txt  animation.cpp  blueprint_drawing.cpp  canvas.cpp  instance.cpp  instance_private.h  style.cpp  widget.cpp  widget_private.h
source/universe/: CMakeLists.txt  animation.cpp  app.cpp  app.h  application.h  component.cpp  component.h  default_style.cpp  draw_data.h  driver.h  element.cpp  element_private.h  entity.cpp  entity.h  entity_private.h  graveyard.cpp  graveyard.h  instance.cpp  instance_private.h  model_private.h  octree.h  private.h  res_map.cpp  res_map_private.h  style.cpp  system.cpp  system.h  timeline.cpp  timeline.h  timeline_private.h  topmost.cpp  typeinfo.desc  ui._h  ui.cpp  ui_private.h  universe.cpp  (+7 more)
test/: 8beeper.cpp  CMakeLists.txt  empty_test.cpp  graphics_test.cpp  graphics_test_bp.cpp  graphics_test_canvas.cpp  graphics_test_cpp.cpp  graphics_test_draw_image.cpp  graphics_test_image.cpp  main.cpp  sound_test.cpp  test_dx.cpp  test_graphics.cpp  test_sound.cpp  test_ui.cpp  test_window.cpp  ui_test.cpp  ui_test_cpp.cpp  ui_test_file.cpp  window_test.cpp
tests/: CMakeLists.txt  achive.txt  empty_test.cpp  graphics_test_canvas.cpp  graphics_test_clear.cpp  graphics_test_copy_image.cpp  graphics_test_draw_image.cpp  main.cpp  test_graphics.cpp  test_sound_record.cpp  test_ui.cpp  test_window.cpp  ui_test_cpp.cpp  ui_test_file.cpp  window_test.cpp
tool/: CMakeLists.txt
tools/: CMakeLists.txt  imgui.ini  preferences.ini
(+2186 files in other folders)
