cmake_minimum_required(VERSION 3.25.0)
project(flame LANGUAGES CXX CSharp)

include("utils.cmake")
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
add_definitions(-W0 -std:c++latest)

set_output_dir("${CMAKE_SOURCE_DIR}/bin")

string(FIND "${CMAKE_LINKER}" "/VC/" pos)
string(SUBSTRING  "${CMAKE_LINKER}" 0 ${pos} VS_LOCATION)

get_filename_component(parent_dir "${CMAKE_SOURCE_DIR}" DIRECTORY)

set(GLM_INCLUDE_DIR "" CACHE PATH "GLM include directory")
if(NOT EXISTS "${GLM_INCLUDE_DIR}")
	message(SEND_ERROR "required GLM is invalid")
endif()

set(PUGIXML_INCLUDE_DIR "" CACHE PATH "Pugi XML directory")
set(PUGIXML_DEBUG_LIB "" CACHE FILEPATH "Pugi XML debug LIB path")
set(PUGIXML_RELEASE_LIB "" CACHE FILEPATH "Pugi XML release LIB path")
if(NOT EXISTS "${PUGIXML_INCLUDE_DIR}" OR (NOT EXISTS "${PUGIXML_DEBUG_LIB}" AND NOT EXISTS "${PUGIXML_RELEASE_LIB}"))
	message(SEND_ERROR "required Pugi XML is invalid")
endif()

set(NJSON_INCLUDE_DIR "" CACHE PATH "NJson include directory")
if(NOT EXISTS "${NJSON_INCLUDE_DIR}")
	message(SEND_ERROR "required NJson is invalid")
endif()

set(CPPCODEC_INCLUDE_DIR "" CACHE PATH "cppcodec include directory")
if(NOT EXISTS "${CPPCODEC_INCLUDE_DIR}")
	message(SEND_ERROR "required cppcodec is invalid")
endif()

set(STB_INCLUDE_DIR "" CACHE PATH "STB include directory")
if(NOT EXISTS "${STB_INCLUDE_DIR}")
	message(SEND_ERROR "required STB is invalid")
endif()

set(MSDFGEN_INCLUDE_DIR "" CACHE PATH "msdfgen include directory")
set(MSDFGEN_LIB_PATH "" CACHE FILEPATH "msdfgen LIB path")
if(NOT EXISTS "${MSDFGEN_INCLUDE_DIR}" OR NOT EXISTS "${MSDFGEN_LIB_PATH}")
	message(STATUS "optional msdfgen is invalid, turn off USE_MSDFGEN")
	set(USE_MSDFGEN off)
else()
	set(USE_MSDFGEN on)
endif()

set(SHA1_INCLUDE_DIR "" CACHE PATH "SHA1 include directory")
if(NOT EXISTS "${SHA1_INCLUDE_DIR}")
	message(STATUS "optional SHA1 is invalid, turn off USE_SHA1")
	set(USE_SHA1 off)
else()
	set(USE_SHA1 on)
endif()

set(GLI_INCLUDE_DIR "" CACHE PATH "GLI include directory")
if(NOT EXISTS "${GLI_INCLUDE_DIR}")
	message(SEND_ERROR "required GLI is invalid")
endif()

set(EXPRTK_INCLUDE_DIR "" CACHE PATH "exprtk include directory")
if(NOT EXISTS "${EXPRTK_INCLUDE_DIR}")
	message(SEND_ERROR "required exprtk is invalid")
endif()

check_path("C:/Program Files/NVIDIA Corporation/NVIDIA Texture Tools/include" p)
set(NVTT_INCLUDE_DIR "${p}" CACHE PATH "NVIDIA Texture Tools include directory")
check_path("C:/Program Files/NVIDIA Corporation/NVIDIA Texture Tools/lib/x64-v142/nvtt30106.lib" p)
set(NVTT_LIB_PATH "${p}" CACHE FILEPATH "NVIDIA Texture Tools LIB path")
check_path("C:/Program Files/NVIDIA Corporation/NVIDIA Texture Tools/nvtt30106.dll" p)
set(NVTT_DLL_PATH "${p}" CACHE FILEPATH "NVIDIA Texture Tools DLL path")
check_path("C:/Program Files/NVIDIA Corporation/NVIDIA Texture Tools/cudart64_110.dll" p)
set(NVTT_CUDA_DLL_PATH "${p}" CACHE FILEPATH "NVIDIA Texture Tools CUDA DLL path")
if(NOT EXISTS "${NVTT_INCLUDE_DIR}" OR NOT EXISTS "${NVTT_LIB_PATH}" OR NOT EXISTS "${NVTT_DLL_PATH}" OR NOT EXISTS "${NVTT_CUDA_DLL_PATH}")
	message(STATUS "optional NVIDIA Texture Tools is invalid, turn off USE_NVTT")
	set(USE_NVTT off)
else()
	set(USE_NVTT on)
endif()

set(SPIRV_CROSS_INCLUDE_DIR "" CACHE PATH "SPIRV Cross include directory")
set(SPIRV_CROSS_DEBUG_LIBS_DIR "" CACHE PATH "SPIRV Cross debug LIBs directory")
set(SPIRV_CROSS_RELEASE_LIBS_DIR "" CACHE PATH "SPIRV Cross release LIBs directory")
if(NOT EXISTS "${SPIRV_CROSS_INCLUDE_DIR}" OR (NOT EXISTS "${SPIRV_CROSS_DEBUG_LIBS_DIR}" AND NOT EXISTS "${SPIRV_CROSS_RELEASE_LIBS_DIR}"))
	message(SEND_ERROR "required SPIRV-Cross is invalid")
endif()

set(ASSIMP_INCLUDE_DIR "" CACHE PATH "Assimp include directory")
set(ASSIMP_LIB_PATH "" CACHE FILEPATH "Assimp LIB path")
set(ASSIMP_DLL_PATH "" CACHE FILEPATH "Assimp DLL path")
if(NOT EXISTS "${ASSIMP_INCLUDE_DIR}" OR NOT EXISTS "${ASSIMP_LIB_PATH}" OR NOT EXISTS "${ASSIMP_DLL_PATH}")
	message(STATUS "optional Assimp is invalid, turn off USE_ASSIMP")
	set(USE_ASSIMP off)
else()
	set(USE_ASSIMP on)
endif()

check_path("C:/Program Files/Autodesk/FBX/FBX SDK/2020.3.4/include" p)
set(FBXSDK_INCLUDE_DIR "${p}" CACHE PATH "FBX SDK include directory")
check_path("C:/Program Files/Autodesk/FBX/FBX SDK/2020.3.4/lib/vs2022/x64/debug/libfbxsdk.lib" p)
set(FBXSDK_LIB_PATH "${p}" CACHE FILEPATH "FBX SDK LIB path")
check_path("C:/Program Files/Autodesk/FBX/FBX SDK/2020.3.4/lib/vs2022/x64/debug/libfbxsdk.dll" p)
set(FBXSDK_DLL_PATH "${p}" CACHE FILEPATH "FBX SDK DLL Path")
if(NOT EXISTS "${FBXSDK_INCLUDE_DIR}" OR NOT EXISTS "${FBXSDK_LIB_PATH}" OR NOT EXISTS "${FBXSDK_DLL_PATH}")
	message(STATUS "optional FBX SDK is invalid, turn off USE_FBXSDK")
	set(USE_FBXSDK off)
else()
	set(USE_FBXSDK on)
endif()

set(PHYSX_INCLUDE_DIR "" CACHE PATH "PhysX include directory")
set(PHYSX_DEBUG_LIBS_DIR "" CACHE PATH "PhysX debug LIBs directory")
set(PHYSX_RELEASE_LIBS_DIR "" CACHE PATH "PhysX release LIBs directory")
if(NOT EXISTS "${PHYSX_INCLUDE_DIR}" OR (NOT EXISTS "${PHYSX_DEBUG_LIBS_DIR}" AND NOT EXISTS "${PHYSX_RELEASE_LIBS_DIR}"))
	message(STATUS "optional PhysX is invalid, turn off USE_PHYSX")
	set(USE_PHYSX off)
else()
	set(USE_PHYSX on)
endif()

set(DETOUR_INCLUDE_DIR "" CACHE PATH "Detour include directory")
set(DETOUR_DEBUG_LIB_PATH "" CACHE FILEPATH "Detour debug LIB path")
set(DETOUR_RELEASE_LIB_PATH "" CACHE FILEPATH "Detour release LIB path")
set(DETOUR_CROWD_INCLUDE_DIR "" CACHE PATH "DetourCrowd include directory")
set(DETOUR_CROWD_DEBUG_LIB_PATH "" CACHE FILEPATH "DetourCrowd debug LIB path")
set(DETOUR_CROWD_RELEASE_LIB_PATH "" CACHE FILEPATH "DetourCrowd release LIB path")
set(DETOUR_TILE_CACHE_INCLUDE_DIR "" CACHE PATH "DetourTileCache include directory")
set(DETOUR_TILE_CACHE_DEBUG_LIB_PATH "" CACHE FILEPATH "DetourTileCache debug LIB path")
set(DETOUR_TILE_CACHE_RELEASE_LIB_PATH "" CACHE FILEPATH "DetourTileCache release LIB path")
set(RECAST_INCLUDE_DIR "" CACHE PATH "Recast include directory")
set(RECAST_DEBUG_LIB_PATH "" CACHE FILEPATH "Recast debug LIB path")
set(RECAST_RELEASE_LIB_PATH "" CACHE FILEPATH "Recast release LIB path")
if(NOT EXISTS "${DETOUR_INCLUDE_DIR}" OR NOT EXISTS "${DETOUR_CROWD_INCLUDE_DIR}" OR NOT EXISTS "${DETOUR_TILE_CACHE_INCLUDE_DIR}" OR NOT EXISTS "${RECAST_INCLUDE_DIR}" OR 
	(NOT EXISTS "${DETOUR_DEBUG_LIB_PATH}" AND NOT EXISTS "${DETOUR_RELEASE_LIB_PATH}") OR (NOT EXISTS "${DETOUR_CROWD_DEBUG_LIB_PATH}" AND NOT EXISTS "${DETOUR_CROWD_RELEASE_LIB_PATH}") OR
	(NOT EXISTS "${DETOUR_TILE_CACHE_DEBUG_LIB_PATH}" AND NOT EXISTS "${DETOUR_TILE_CACHE_RELEASE_LIB_PATH}") OR (NOT EXISTS "${RECAST_DEBUG_LIB_PATH}" AND NOT EXISTS "${RECAST_RELEASE_LIB_PATH}"))
	message(STATUS "optional Recastnavigation is invalid, turn off USE_RECASTNAV")
	set(USE_RECASTNAV off)
else()
	set(USE_RECASTNAV on)
endif()

set(FONT_AWESOME_DIR "" CACHE PATH "Font-Awesome directory")
if(NOT EXISTS "${FONT_AWESOME_DIR}")
	message(STATUS "optional font-awesome is invalid, turn off USE_FONT_AWESOME")
	set(USE_FONT_AWESOME off)
else()
	set(USE_FONT_AWESOME on)
endif()

set(IMGUI_DIR "" CACHE PATH "imgui(docking branch) directory")
if(NOT EXISTS "${IMGUI_DIR}")
	message(STATUS "optional imgui is invalid, turn off USE_IMGUI")
	set(USE_IMGUI off)
else()
	set(USE_IMGUI on)
endif()

set(IM_GUIZMO_DIR "" CACHE PATH "ImGuizmo directory")
if(NOT EXISTS "${IM_GUIZMO_DIR}")
	message(STATUS "optional ImGuizmo is invalid, turn off USE_IM_GUIZMO")
	set(USE_IM_GUIZMO off)
else()
	set(USE_IM_GUIZMO on)
endif()

set(IMGUI_NODE_EDITOR_DIR "" CACHE PATH "ImGui Node Editor directory")
if(NOT EXISTS "${IMGUI_NODE_EDITOR_DIR}")
	message(STATUS "optional ImGui Node Editor is invalid, turn off USE_IMGUI_NODE_EDITOR")
	set(USE_IMGUI_NODE_EDITOR off)
else()
	set(USE_IMGUI_NODE_EDITOR on)
endif()

set(FORTUNE_ALGORITHM_DIR "" CACHE PATH "FortuneAlgorithm directory")
if(NOT EXISTS "${FORTUNE_ALGORITHM_DIR}")
	message(STATUS "optional FortuneAlgorithm is invalid, turn off USE_FORTUNE_ALGORITHM")
	set(USE_FORTUNE_ALGORITHM off)
else()
	set(USE_FORTUNE_ALGORITHM on)
endif()

check_path("$ENV{ProgramFiles} (x86)/OpenAL 1.1 SDK/include" p)
set(OPENAL_INCLUDE_DIR "${p}" CACHE PATH "OpenAL include directory")
check_path("$ENV{ProgramFiles} (x86)/OpenAL 1.1 SDK/libs/Win64/OpenAL32.lib" p)
set(OPENAL_LIB_PATH "${p}" CACHE FILEPATH "OpenAL LIB path")
if(NOT EXISTS "${OPENAL_INCLUDE_DIR}" OR NOT EXISTS "${OPENAL_LIB_PATH}")
	message(STATUS "optional OpenAL is invalid, turn off USE_OPENAL")
	set(USE_OPENAL off)
else()
	set(USE_OPENAL on)
endif()

check_path("$ENV{ProgramFiles}/MySQL/MySQL Server 8.0/include" p)
set(MYSQL_INCLUDE_DIR "${p}" CACHE PATH "MySQL include directory")
check_path("$ENV{ProgramFiles}/MySQL/MySQL Server 8.0/lib/libmysql.lib" p)
set(MYSQL_LIB_PATH "${p}" CACHE FILEPATH "MySQL LIB path")
check_path("$ENV{ProgramFiles}/MySQL/MySQL Server 8.0/lib/libmysql.dll" p)
set(MYSQL_DLL_PATH "${p}" CACHE FILEPATH "MySQL DLL Path")
if(NOT EXISTS "${MYSQL_INCLUDE_DIR}" OR NOT EXISTS "${MYSQL_LIB_PATH}" OR NOT EXISTS "${MYSQL_DLL_PATH}")
	message(STATUS "optional MySQL is invalid, turn off USE_MYSQL")
	set(USE_MYSQL off)
else()
	set(USE_MYSQL on)
endif()

check_path("C:\\Program Files\\RenderDoc" p)
set(RENDERDOC_DIR "${p}" CACHE PATH "RenderDoc directory")
if(NOT EXISTS "${RENDERDOC_DIR}")
	set(HAS_RENDERDOC off)
else()
	set(HAS_RENDERDOC on)
endif()

set(USE_UNIVERSE_MODULE on CACHE BOOL "Use Flame Universe Module")

add_subdirectory(source)
add_subdirectory(tests)
add_subdirectory(tools)
