if (USE_IMGUI)
	set(source_files "${IMGUI_DIR}/imconfig.h;${IMGUI_DIR}/imgui.h;${IMGUI_DIR}/imgui.cpp;${IMGUI_DIR}/imgui_draw.cpp;${IMGUI_DIR}/imgui_widgets.cpp;${IMGUI_DIR}/imgui_tables.cpp;${IMGUI_DIR}/misc/cpp/imgui_stdlib.h;${IMGUI_DIR}/misc/cpp/imgui_stdlib.cpp")
	if (USE_IM_FILE_DIALOG)
		set(imfiledialog_files "${IM_FILE_DIALOG_DIR}/ImFileDialog.h;${IM_FILE_DIALOG_DIR}/ImFileDialog.cpp")
	endif()
	add_library(imgui ${source_files} ${imfiledialog_files})
	set_target_properties(imgui PROPERTIES FOLDER "flame")
	target_include_directories(imgui PUBLIC "${IMGUI_DIR}")
	if (USE_IM_FILE_DIALOG)
		target_include_directories(imgui PUBLIC "${IM_FILE_DIALOG_DIR}")
		target_include_directories(imgui PRIVATE "${STB_INCLUDE_DIR}")
	endif()
endif()

add_subdirectory(foundation)
add_subdirectory(typeinfogen)
# blueprint is WIP
#add_subdirectory(blueprint)
add_subdirectory(graphics)
add_subdirectory(physics)
add_subdirectory(sound)
add_subdirectory(universe)
