add_subdirectory(foundation)
add_subdirectory(typeinfogen)
add_subdirectory(vs_automation)

# build imgui by ourselves because we need imgui to include glm and we need to add some extensions
if(USE_IMGUI)
	set(config_file "${CMAKE_CURRENT_SOURCE_DIR}/imgui_config.h")
	file(GLOB source_files "${IMGUI_DIR}/*.h*" "${IMGUI_DIR}/*.c*" "${IMGUI_DIR}/misc/cpp/*.h*" "${IMGUI_DIR}/misc/cpp/*.c*")
	set(source_files "${config_file};${CMAKE_CURRENT_SOURCE_DIR}/imgui_extension.h;${CMAKE_CURRENT_SOURCE_DIR}/imgui_extension.cpp;${source_files}")
	if(USE_IM_GUIZMO)
		file(GLOB imguizmo_files "${IM_GUIZMO_DIR}/*.h*" "${IM_GUIZMO_DIR}/*.c*")
	endif()
	if(USE_IMGUI_NODE_EDITOR)
		file(GLOB imguinodeeditor_files "${IMGUI_NODE_EDITOR_DIR}/*.h*" "${IMGUI_NODE_EDITOR_DIR}/*.c*")
	endif()
	add_library(imgui ${source_files} ${imfiledialog_files} ${imguizmo_files} ${imguinodeeditor_files})
	set_target_properties(imgui PROPERTIES FOLDER "flame")
	target_compile_definitions(imgui PUBLIC IMGUI_USER_CONFIG="${config_file}")
	target_include_directories(imgui PUBLIC "${IMGUI_DIR}")
	target_include_directories(imgui PRIVATE "${GLM_INCLUDE_DIR}")
	if(USE_IM_GUIZMO)
		target_compile_definitions(imgui PUBLIC USE_IM_GUIZMO)
		target_include_directories(imgui PUBLIC "${IM_GUIZMO_DIR}")
	endif()
	if(USE_IMGUI_NODE_EDITOR)
		target_compile_definitions(imgui PUBLIC USE_IMGUI_NODE_EDITOR)
		target_include_directories(imgui PUBLIC "${IMGUI_NODE_EDITOR_DIR}")
	endif()

	file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame")
	add_custom_command(TARGET imgui PRE_BUILD COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_SOURCE_DIR}/include/flame")
	add_custom_command(TARGET imgui PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/imgui_extension.h" "${CMAKE_SOURCE_DIR}/include/flame")

	target_link_libraries(imgui flame_foundation)
endif()

add_subdirectory(graphics)
add_subdirectory(audio)
add_subdirectory(universe)
