add_subdirectory(empty_test)
add_subdirectory(window_test)
add_subdirectory(graphics_test_clear)
add_subdirectory(graphics_test_copy_image)
add_subdirectory(graphics_test_draw_image)
add_subdirectory(graphics_test_canvas)
add_subdirectory(graphics_test_star)
add_subdirectory(graphics_test_rain)
add_subdirectory(sound_test)
add_subdirectory(8beeper)
add_subdirectory(schedule_test)
add_subdirectory(ui_test_cpp)
add_subdirectory(ui_test_file)
add_subdirectory(bp_test)
