add_subdirectory(empty_test)
add_subdirectory(raster)
add_subdirectory(window_test)
add_subdirectory(graphics_test_star)
add_subdirectory(graphics_test_rain)
add_subdirectory(sound_test)
add_subdirectory(wave_maker)
add_subdirectory(schedule_test)
add_subdirectory(universe_test)
add_subdirectory(ui_test)
add_subdirectory(bp_test)
