add_subdirectory(text_maker)
add_subdirectory(SLOC)
add_subdirectory(when_key)
add_subdirectory(when_changed)
add_subdirectory(typeinfogen)
add_subdirectory(compiler)
add_subdirectory(texture_maker)
add_subdirectory(texture_packer)
add_subdirectory(editor)
add_subdirectory(frame_sync_server)
add_subdirectory(package_maker)
