file(GLOB_RECURSE SOURCE_LIST "*.c*")
add_executable(tetris ${SOURCE_LIST})
set_target_properties(tetris PROPERTIES FOLDER "game")
set_target_properties(tetris PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
target_link_libraries(tetris flame_network)
target_link_libraries(tetris flame_sound)
target_link_libraries(tetris flame_universe)
