file(GLOB_RECURSE SOURCE_LIST "*.c*")
add_executable(basketbal_shooting ${SOURCE_LIST})
set_target_properties(basketbal_shooting PROPERTIES FOLDER "games")
target_link_libraries(basketbal_shooting flame_universe)
set_target_properties(basketbal_shooting PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
